css/style.css
* {
  padding: 0px;
  margin: 0px;
  box-sizing: border-box;
  font-family: "Poppins", sans-serif;
}

.poppins-regular {
  font-family: "Poppins", sans-serif;
  font-weight: 400;
  font-style: normal;
}

.poppins-medium {
  font-family: "Poppins", sans-serif;
  font-weight: 500;
  font-style: normal;
}

.poppins-semibold {
  font-family: "Poppins", sans-serif;
  font-weight: 600;
  font-style: normal;
}

.poppins-bold {
  font-family: "Poppins", sans-serif;
  font-weight: 700;
  font-style: normal;
}

.poppins-extrabold {
  font-family: "Poppins", sans-serif;
  font-weight: 800;
  font-style: normal;
}

.poppins-black {
  font-family: "Poppins", sans-serif;
  font-weight: 900;
  font-style: normal;
}

.land {
  width: 100%;
  display: flex;
  justify-content: center;
  background: #0b0a09;
}

#landing-section {
  background-image: url("../images/Home.png");
  width: 100%;
  max-width: 1920px;
  height: 1071px;
  gap: 0px;
  opacity: 0px;
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  position: relative;
  margin: auto;
}

.home-main-img {
  display: none;
}

header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  padding: 0 20px;
  box-sizing: border-box;
}

.menu {
  display: none;
}

.logo-image {
  width: 160px;
  height: 77.41px;
  margin-left: 80px;
  margin-top: 20px;
}

.jbl {
  display: none;
}

nav ul {
  display: flex;
  flex-wrap: wrap;
  list-style: none;
  padding: 0;
  margin: 0;
  justify-content: center;
}

nav ul li {
  color: aliceblue;
  font-family: serif;
  font-size: 20px;
  font-weight: 400;
  line-height: 24px;
  margin: 0 30px;
}

nav ul li:hover {
  color: #590078;
  cursor: pointer;
}

header,
nav {
  width: 100%;
  max-width: 1440px;
}

.hero-text {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  position: absolute;
  top: 62%;
  left: 33%;
  transform: translate(-50%, -50%);
}

.hero-text h1 {
  font-family: "poppins", Times, serif;
  font-size: 8vw;
  font-weight: 800;
  line-height: 1.1;
  text-align: left;
  color: #3a2152;
  max-width: 90vw;
}

.social-media {
  width: 24px;
  height: 24px;
  top: 511px;
  left: 160px;
  padding: 2px;
  gap: 0px;
  opacity: 0px;
}

aside {
  width: 123px;
  height: 250px;
  top: 365px;
  left: 160px;
  gap: 0px;
  border: 1px 0px 0px 0px;
  opacity: 0px;
}

.social {
  display: flex;
  flex-direction: column;
  width: 24px;
  height: 104px;
  top: 511px;
  left: 160px;
  gap: 0px;
  opacity: 0px;
  position: absolute;
}

.follow-us p {
  transform: rotate(90deg);
  width: 83px;
  height: 24px;
  top: 355px;
  left: 137px;
  gap: 0px;
  opacity: 0px;
  position: absolute;
}

hr {
  width: 48px;
  height: 0px;
  top: 461px;
  left: 233px;
  gap: 0px;
  border: 1px 0px 0px 0px;
  opacity: 0px;
  transform: rotate(90deg);
  position: absolute;
}

#about-page {
  background-color: #0b0a09;
  width: 100%;
  max-width: 1920px;
  height: 478px;
  top: 1071px;
  padding: 130px 0px 88px 0px;
  gap: 0px;
  opacity: 0px;
  margin: auto;
  color: white;
}

/* block 2 */
.block2 {
  width: 100%;
  display: flex;
  justify-content: center;
  background-color: #0b0a09;
}
.block2-container {
  max-width: 1440px;
  width: 100%;
  height: 406px;
  display: flex;
  justify-content: center;
}
.block2-group1 {
  max-width: 989px;
  width: 100%;
  height: 405px;
  display: flex;
  justify-content: space-around;
  align-items: center;
  text-align: center;
  padding: 0 20px;
}
.block2-contents {
  width: 401px;
  text-align: start;
}
.block2-contents h3 {
  font-size: 36px;
  font-weight: 600;
  line-height: 54px;
  color: #ffffff;
}
.block2-contents p {
  font-size: 16px;
  line-height: 24px;
  color: #9d9895;
  margin-top: 41px;
}
.block2-img {
  width: 500px;
}
.block2-img .infine {
  width: 100%;
}

.block2-img .bloc-headp {
  display: none;
}
.block2-contant-sec2 {
  margin-top: 55px;
}

.shaded-btn img {
  width: 32px;
  height: 32px;
  padding: 2.67px;
}

.shaded-btn {
  background: linear-gradient(90deg, #4a4745 0%, #151414 100%);
  width: 178px;
  height: 56px;
  text-align: center;
  border: none;
  justify-content: center;
  border-radius: 20px;
  color: #ffffff;
}

.items-main {
  width: 100%;
  background-color: #0b0a09;
  color: white;
}

.items {
  width: 100%;
  max-width: 1440px;
  height: 676px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  margin: 0 auto;
  padding: 0 20px;
  overflow: hidden;
}

.items h3 {
  margin-bottom: 20px;

  font-size: 36px;
  font-weight: 600;
  line-height: 54px;
  text-align: left;
}
.item-images {
  display: flex;
  flex-direction: row;
  justify-content: center;
  gap: 10px;
  width: 100%;
}

.item-images {
  display: flex;
  flex-direction: row;
  gap: 20px;
  width: 100%;
}

.blr img {
  width: 100%;
  max-width: 280px;
  height: auto;
}

.no-blr img {
  width: 100%;
  max-width: 350px;
  height: auto;
}

.no-blr-btn .nbb {
  background: linear-gradient(90deg, #4a4745 0%, #151414 100%);
  width: 145px;
  height: 40px;
  border: none;
  border-radius: 20px;
  color: #ffffff;
}

.blr-btn .bb {
  background: linear-gradient(90deg, #4a4745 0%, #151414 100%);
  width: 145px;
  height: 40px;
  border: none;
  border-radius: 20px;
  color: #ffffff;
  filter: blur(3px);
}

/* section4 */
.section4 {
  width: 100%;
  background-color: #0b0a09;
  color: white;
}

.headphone {
  max-width: 500px;
  position: relative;
}

.headphone .image {
  width: 100%;
  height: 487.08px;
  margin-top: 40px;
}

.headphone .d1 {
  width: 20px;
  height: 20px;
  position: absolute;
  top: 165px;
  right: 46px;
}

.headphone .r11 {
  width: 40px;
  position: absolute;
  border: 2px #7d7978;
  top: 146px;
  right: 9px;
}

.headphone .r12 {
  right: -22px;
  width: 32px;
  border: 2px #7d7978;
  position: absolute;
  top: 146px;
}

.headphone .easy {
  max-width: 115px;
  height: 50px;
  position: absolute;
  top: 120px;
}
/* ... */

